# VQGAN-Multi-Bucket-Tokenizer

./: .gitignore  README.md  pyproject.toml  requirements.txt  train.sh  train_uv.sh  train_with_coco_mini.sh  train_with_coco_mini_uv.sh
.claude/: mulit-vqgan.md
configs/: vqgan-multi.json
tests/: test_bucketed_sampler.py  test_shape_agnostic.py
vqgan/: __init__.py  config.py  eval.py  train.py
vqgan/data/: __init__.py  buckets.py  dataset.py
vqgan/losses/: __init__.py  adversarial.py  losses.py  perceptual.py
vqgan/models/: __init__.py  common.py  decoder.py  discriminator.py  encoder.py  quantizer.py  vqgan.py
