[project]
name = "vqgan32"
version = "0.1.0"
description = "VQGAN multi-resolution aspect-ratio-bucketed image tokenizer (max side 768px)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "lpips>=0.1.4",
    "scipy>=1.11",
    "numpy>=1.26",
    "pillow>=10.0",
    "tensorboard>=2.15",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vqgan"]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
